@@ -10,6 +10,8 @@
 	* src/plugins/TestcaseGenerator.py: Adapt to changes in RelLib
 	* src/Utils.py: Adapt to changes in RelLib
 
+	* src/ToolTips.py: Adapt to changes in RelLib
+
 2006-04-13  Don Allingham  <don@gramps-project.org>
 	* src/DataViews/_FamilyView.py: remove bad tab
 
